course enrollment button alignment issue on mobile fix

--- a/laravel/public/css/style.css
+++ b/laravel/public/css/style.css
@@ -9563,6 +9563,7 @@ footer{
 	}
 	.enroll-button-section{
 		text-align: center;
+		padding-left: 0px;
 	}	
 	.enroll-button-section .enroll-button{
 		display: inline-block;
